--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,6 +76,7 @@
 	}
 	body {
 		@apply bg-background text-foreground;
+		/* Find out what this do */
 		font-feature-settings: "rlig" 1, "calt" 1;
 	}
 }
