--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,8 @@
 
 	--ring: 215 20.2% 65.1%;
 
+	--dice: 206 82% 65%;
+
 	--radius: 0.5rem;
 }
 
@@ -66,6 +68,8 @@
 	--destructive-foreground: 210 40% 98%;
 
 	--ring: 216 34% 17%;
+
+	--dice: 211 90% 34%;
 
 	--radius: 0.5rem;
 }
