--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,10 @@
 @tailwind utilities;
 
 @layer base {
-	:root {
+	.light,
+	:root:not(.dark) {
+		/* variables for light theme */
+
 		--background: 0 0% 100%;
 		--foreground: 222.2 84% 4.9%;
 
@@ -40,7 +43,48 @@
 		--radius: 0.5rem;
 	}
 
+	@media only screen and (prefers-color-scheme: dark) {
+		:root:not(.light) {
+			/* variables for dark theme */
+
+			--background: 222.2 84% 4.9%;
+			--foreground: 210 40% 98%;
+
+			--muted: 217.2 32.6% 17.5%;
+			--muted-foreground: 215 20.2% 65.1%;
+
+			--popover: 222.2 84% 4.9%;
+			--popover-foreground: 210 40% 98%;
+
+			--card: 222.2 84% 4.9%;
+			--card-foreground: 210 40% 98%;
+
+			--border: 217.2 32.6% 17.5%;
+			--input: 217.2 32.6% 17.5%;
+
+			--primary: 210 40% 98%;
+			--primary-foreground: 222.2 47.4% 11.2%;
+
+			--secondary: 217.2 32.6% 17.5%;
+			--secondary-foreground: 210 40% 98%;
+
+			--accent: 217.2 32.6% 17.5%;
+			--accent-foreground: 210 40% 98%;
+
+			--destructive: 0 62.8% 30.6%;
+			--destructive-foreground: 0 85.7% 97.3%;
+
+			--info: 211 86% 27%;
+
+			--dice: 211 90% 34%;
+
+			--ring: 217.2 32.6% 17.5%;
+		}
+	}
+
 	.dark {
+		/* variables for dark theme */
+
 		--background: 222.2 84% 4.9%;
 		--foreground: 210 40% 98%;
 
