--- a/src/index.css
+++ b/src/index.css
@@ -2,90 +2,53 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-	.light,
-	:root:not(.dark) {
-		/* variables for light theme */
+/* Although it seems to be working well here, this has broken dark mode in the past, and seems unnecessary */
+/* @layer base { */
+.light,
+:root:not(.dark) {
+	/* variables for light theme */
 
-		--background: 0 0% 100%;
-		--foreground: 222.2 84% 4.9%;
+	--background: 0 0% 100%;
+	--foreground: 222.2 84% 4.9%;
 
-		--muted: 210 40% 96.1%;
-		--muted-foreground: 215.4 16.3% 46.9%;
+	--muted: 210 40% 96.1%;
+	--muted-foreground: 215.4 16.3% 46.9%;
 
-		--popover: 0 0% 100%;
-		--popover-foreground: 222.2 84% 4.9%;
+	--popover: 0 0% 100%;
+	--popover-foreground: 222.2 84% 4.9%;
 
-		--card: 0 0% 100%;
-		--card-foreground: 222.2 84% 4.9%;
+	--card: 0 0% 100%;
+	--card-foreground: 222.2 84% 4.9%;
 
-		--border: 214.3 31.8% 91.4%;
-		--input: 214.3 31.8% 91.4%;
+	--border: 214.3 31.8% 91.4%;
+	--input: 214.3 31.8% 91.4%;
 
-		--primary: 222.2 47.4% 11.2%;
-		--primary-foreground: 210 40% 98%;
+	--primary: 222.2 47.4% 11.2%;
+	--primary-foreground: 210 40% 98%;
 
-		--secondary: 210 40% 96.1%;
-		--secondary-foreground: 222.2 47.4% 11.2%;
+	--secondary: 210 40% 96.1%;
+	--secondary-foreground: 222.2 47.4% 11.2%;
 
-		--accent: 210 40% 96.1%;
-		--accent-foreground: 222.2 47.4% 11.2%;
+	--accent: 210 40% 96.1%;
+	--accent-foreground: 222.2 47.4% 11.2%;
 
-		--destructive: 0 84.2% 60.2%;
-		--destructive-foreground: 210 40% 98%;
+	--destructive: 0 84.2% 60.2%;
+	--destructive-foreground: 210 40% 98%;
 
-		--ring: 215 20.2% 65.1%;
+	--ring: 215 20.2% 65.1%;
 
-		--info: 208 78% 77%;
+	--info: 208 78% 77%;
 
-		--dice: 206 82% 65%;
+	--dice: 206 82% 65%;
 
-		--radius: 0.5rem;
-	}
+	--radius: 0.5rem;
+}
 
-	@media only screen and (prefers-color-scheme: dark) {
-		:root:not(.light) {
-			/* variables for dark theme */
-
-			--background: 222.2 84% 4.9%;
-			--foreground: 210 40% 98%;
-
-			--muted: 217.2 32.6% 17.5%;
-			--muted-foreground: 215 20.2% 65.1%;
-
-			--popover: 222.2 84% 4.9%;
-			--popover-foreground: 210 40% 98%;
-
-			--card: 222.2 84% 4.9%;
-			--card-foreground: 210 40% 98%;
-
-			--border: 217.2 32.6% 17.5%;
-			--input: 217.2 32.6% 17.5%;
-
-			--primary: 210 40% 98%;
-			--primary-foreground: 222.2 47.4% 11.2%;
-
-			--secondary: 217.2 32.6% 17.5%;
-			--secondary-foreground: 210 40% 98%;
-
-			--accent: 217.2 32.6% 17.5%;
-			--accent-foreground: 210 40% 98%;
-
-			--destructive: 0 62.8% 30.6%;
-			--destructive-foreground: 0 85.7% 97.3%;
-
-			--info: 211 86% 27%;
-
-			--dice: 211 90% 34%;
-
-			--ring: 217.2 32.6% 17.5%;
-		}
-	}
-
-	.dark {
+@media only screen and (prefers-color-scheme: dark) {
+	:root:not(.light) {
 		/* variables for dark theme */
 
-		--background: 222.2 84% 4.9%;
+		--background: 222.2 84% 4.9%; /* #020817 */
 		--foreground: 210 40% 98%;
 
 		--muted: 217.2 32.6% 17.5%;
@@ -120,14 +83,52 @@
 	}
 }
 
-@layer base {
-	* {
-		@apply border-border;
-	}
-	body {
-		@apply bg-background text-foreground;
-	}
+.dark {
+	/* variables for dark theme */
+
+	--background: 222.2 84% 4.9%;
+	--foreground: 210 40% 98%;
+
+	--muted: 217.2 32.6% 17.5%;
+	--muted-foreground: 215 20.2% 65.1%;
+
+	--popover: 222.2 84% 4.9%;
+	--popover-foreground: 210 40% 98%;
+
+	--card: 222.2 84% 4.9%;
+	--card-foreground: 210 40% 98%;
+
+	--border: 217.2 32.6% 17.5%;
+	--input: 217.2 32.6% 17.5%;
+
+	--primary: 210 40% 98%;
+	--primary-foreground: 222.2 47.4% 11.2%;
+
+	--secondary: 217.2 32.6% 17.5%;
+	--secondary-foreground: 210 40% 98%;
+
+	--accent: 217.2 32.6% 17.5%;
+	--accent-foreground: 210 40% 98%;
+
+	--destructive: 0 62.8% 30.6%;
+	--destructive-foreground: 0 85.7% 97.3%;
+
+	--info: 211 86% 27%;
+
+	--dice: 211 90% 34%;
+
+	--ring: 217.2 32.6% 17.5%;
 }
+/* } */
+
+/* @layer base { */
+* {
+	@apply border-border;
+}
+body {
+	@apply bg-background text-foreground;
+}
+/* } */
 
 a {
 	@apply text-blue-600;
