Improve dark theme colors and fix border radius

--- a/src/index.css
+++ b/src/index.css
@@ -48,67 +48,69 @@
 	:root:not(.light) {
 		/* variables for dark theme */
 
-		--background: 222.2 84% 4.9%; /* #020817 */
-		--foreground: 210 40% 98%;
+		--background: 216 50% 11.8%; /* #020817 */
+		--foreground: 210 6% 80%;
 
 		--muted: 217.2 32.6% 17.5%;
 		--muted-foreground: 215 20.2% 65.1%;
 
 		--popover: 222.2 84% 4.9%;
-		--popover-foreground: 210 40% 98%;
+		--popover-foreground: 210 6% 80%;
 
 		--card: 222.2 84% 4.9%;
-		--card-foreground: 210 40% 98%;
+		--card-foreground: 210 6% 80%;
 
 		--border: 217.2 32.6% 17.5%;
 		--input: 217.2 32.6% 17.5%;
 
-		--primary: 210 40% 98%;
+		--primary: 210 6% 80%;
 		--primary-foreground: 222.2 47.4% 11.2%;
 
 		--secondary: 217.2 32.6% 17.5%;
-		--secondary-foreground: 210 40% 98%;
+		--secondary-foreground: 210 6% 80%;
 
 		--accent: 217.2 32.6% 17.5%;
-		--accent-foreground: 210 40% 98%;
+		--accent-foreground: 210 6% 80%;
 
 		--destructive: 0 62.8% 30.6%;
 		--destructive-foreground: 0 85.7% 97.3%;
 
 		--info: 211 86% 27%;
 
-		--dice: 211 90% 34%;
+		--dice: 211 90% 30%;
 
 		--ring: 217.2 32.6% 17.5%;
+
+		--radius: 0.5rem;
 	}
 }
 
 .dark {
 	/* variables for dark theme */
 
-	--background: 222.2 84% 4.9%;
-	--foreground: 210 40% 98%;
+	--background: 216 50% 11.8%; /* #020817 */
+	--foreground: 210 6% 80%;
 
 	--muted: 217.2 32.6% 17.5%;
 	--muted-foreground: 215 20.2% 65.1%;
 
 	--popover: 222.2 84% 4.9%;
-	--popover-foreground: 210 40% 98%;
+	--popover-foreground: 210 6% 80%;
 
 	--card: 222.2 84% 4.9%;
-	--card-foreground: 210 40% 98%;
+	--card-foreground: 210 6% 80%;
 
 	--border: 217.2 32.6% 17.5%;
 	--input: 217.2 32.6% 17.5%;
 
-	--primary: 210 40% 98%;
+	--primary: 210 6% 80%;
 	--primary-foreground: 222.2 47.4% 11.2%;
 
 	--secondary: 217.2 32.6% 17.5%;
-	--secondary-foreground: 210 40% 98%;
+	--secondary-foreground: 210 6% 80%;
 
 	--accent: 217.2 32.6% 17.5%;
-	--accent-foreground: 210 40% 98%;
+	--accent-foreground: 210 6% 80%;
 
 	--destructive: 0 62.8% 30.6%;
 	--destructive-foreground: 0 85.7% 97.3%;
@@ -118,6 +120,8 @@
 	--dice: 211 90% 34%;
 
 	--ring: 217.2 32.6% 17.5%;
+
+	--radius: 0.5rem;
 }
 /* } */
 
