--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@
 .dark {
 	/* variables for dark theme */
 
-	--background: 216 50% 11.8%; /* #020817 */
+	--background: 216 50% 11.8%;
 	--foreground: 210 6% 80%;
 
 	--muted: 217.2 32.6% 17.5%;
