Fix disabling of pull-to-refresh
Seems like `overscroll-behavior-y` on `body` isn't enough anymore, it needs to be on `html` and it's recommended to have it on `body` too. Also, `contain` is the recommended value instead of `none`.

--- a/src/index.css
+++ b/src/index.css
@@ -94,9 +94,14 @@
 	* {
 		@apply border-border;
 	}
+
+	:root,
+	body {
+		overscroll-behavior-y: contain;
+	}
+
 	body {
 		@apply bg-background text-foreground;
-		overscroll-behavior-y: none;
 	}
 }
 
